--- a/_data/data.yml
+++ b/_data/data.yml
@@ -4,262 +4,165 @@
 
 sidebar:
     position: right # position of the sidebar : left or right
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
-    education: True # set to False if you want education in main section instead of in sidebar
+    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
+    education: False # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    name: Krzysztof Hrycalik
+    tagline:
+    avatar:   #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    timezone: America/Cancun Timezone
+    email: kh221100@wp.pl
+    phone: +48 787 799 809
+    timezone: Central European Standard Time
     citizenship:
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
+    website:
+    linkedin: krzysztof-hrycalik
+    xing:
+    github: khrycalik
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
-    goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: http://www.africau.edu/images/default/sample.pdf
+    twitter:
+    stack-overflow:
+    codewars: khrycalik
+    goodreads: # Number-Username,
+    pdf:
 
     languages:
       title: Languages
       info:
         - idiom: English
-          level: Native
+          level: Fluent
 
-        - idiom: French
-          level: Professional
-
-        - idiom: Spanish
-          level: Professional
 
     interests:
       title: Interests
       info:
-        - item: Climbing
+        - item: Automotive
           link:
 
-        - item: Snowboarding
+        - item: Skiing
           link:
 
-        - item: Cooking
+        - item: Squash
           link:
+
+    bookshelf:
+      title: Bookshelf
+      info:
+        - item: Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow by Aurélien Géron
+          link: https://www.amazon.com/Hands-Machine-Learning-Scikit-Learn-TensorFlow/dp/1492032646
+
+        - item: "Code That Fits in Your Head: Heuristics for Software Engineering by Mark Seemann"
+          link: https://www.amazon.com/Code-That-Fits-Your-Head/dp/0137464401
+
 
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      As part of my professional development and personal interests, I continuously learn about AI/ML. I utilize internal training systems at work and dedicate my free time to reading books such as the excellent publication "Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow" by Aurélien Géron.
+      My interest in this field began during the preparation of my engineering thesis, where I utilized genetic algorithms with the support of the Ares supercomputer to analyze their functionality and the impact of model modifications on solving the traveling salesman problem and the knapsack problem.
 education:
     title: Education
     info:
-      - degree: MSc in Computer Science
-        university: University of London
-        time: 2011 - 2012
+      - degree: BSc in Applied Computer Science
+        university: Cracow AGH University of Science and Technology
+        time: 2019 - 2023
         details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - degree: BSc in Applied Mathematics
-        university: Bristol University
-        time: 2007 - 2011
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          Applied Computer Science at Faculty of Physics and Applied Computer Science – Databases, Graphics and Multimedia Specialization
+            - BSc Thesis: Application of a genetic algorithm for travel optimization
 
 experiences:
     title: Experiences
     info:
-      - role: Lead Developer
-        time: 2015 - Present
-        company: Startup Hubs, San Francisco
+      - role: Software Developer
+        time: 2021 - Present
+        company: Ericsson
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
-      - role: Senior Software Engineer
-        time: 2014 - 2015
-        company: Google, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - role: UI Developer
-        time: 2012 - 2014
-        company: Amazon, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          Currently, I am working on one of Ericsson's 5G key projects called Booster Carrier Sleep. It enables dynamic and autonomous activation and deactivation of carriers based on traffic demand.
+          This software is a key factor in enabling energy efficiency.
+          As one of the most competent teams in the 5G Traffic Control (TC) domain, we have been assigned to work on the design and implementation of a solution in this sector.
+          Regarding my responsibilities, as a member of the Cross Functional Team (XFT), I actively participate in preparing solution proposals, implementing, testing, and documenting them.
+          Each of these stages is preceded by thorough analysis of documentation and code to create the best and most robust solutions. 
+          As part of the implementation, I use C++17. Depending on the level, tests either utilize the Google Test framework or are written in Erlang. The main part of the documentation is written using plantUML.
+
+          On a daily basis, I assume the additional role of a security master within the team. This role involves continuous self-improvement in the field of security, both in terms of writing secure code in compliance with SEI CERT standards and in terms of legal regulations, for example, related to the use of artificial intelligence or third-party products. I share this knowledge with the team to ensure that our code is highly resistant to various attacks and errors.
+
 
 certifications:
-      title: Certifications
+      title: Learning
+      intro: >
+        As part of my professional development and personal interests, I continuously learn about AI/ML. I utilize internal training systems at work and dedicate my free time to reading books such as the excellent publication "Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow" by Aurélien Géron.
+        My interest in this field began during the preparation of my engineering thesis, where I utilized genetic algorithms with the support of the Ares supercomputer to analyze their functionality and the impact of model modifications on solving the traveling salesman problem and the knapsack problem.
       list:
-        - name: CV Builder
-          start: 2020
-          end: 2021
-          organization: Microsoft
-          credentialid: 111-222
-          credentialurl: www.google.com
-          credentialname: Google
-          details: |
-            Details about cert. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
-            Nullam eget orci purus. Nullam ultrices neque nibh.
-            Aenean fermentum, felis vulputate suscipit accumsan,
-            sem enim bibendum augue, sed convallis arcu lacus at dui.
-            Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
-            Praesent felis nibh, eleifend id eleifend id, dictum id enim.
-            Praesent venenatis erat non augue suscipit consectetur.
-
-            Second paragraph. Sed eleifend enim ante, vitae efficitur purus
-            fringilla vel. Ut euismod, sem sed vulputate venenatis,
-            justo diam viverra velit, sed rhoncus leo leo eu justo.
-            Suspendisse placerat risus ante, sed porta nisi blandit at.
-        - name: Git learning
-          start: 2019
+        - name: AWS Machine Learning
+          start: 2023
           end:
-          organization: Microsoft
-          credentialid: 111-222
-          credentialurl: www.github.com
-          credentialname: Github
+          organization: AWS
+          credentialid:
+          credentialurl: https://explore.skillbuilder.aws/learn/lp/28/machine-learning-learning-plan
+          credentialname: AWS Machine Learning
           details: |
-            Older certification. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
-            Nullam eget orci purus. Nullam ultrices neque nibh.
-            Aenean fermentum, felis vulputate suscipit accumsan,
-            sem enim bibendum augue, sed convallis arcu lacus at dui.
-            Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
-            Praesent felis nibh, eleifend id eleifend id, dictum id enim.
-            Praesent venenatis erat non augue suscipit consectetur.
+            I know how to integrate ML and AI with AWS tools and applications. This course has also helped me explore a broader and deeper set of machine learning services and supporting cloud infrastructure.
+        - name: AWS Practitioner 
+          start: 2023
+          end: 
+          organization: AWS
+          credentialid: 
+          credentialurl: https://www.youtube.com/watch?v=SOTamWNgDKc&t=1s&ab_channel=freeCodeCamp.org
+          credentialname: AWS Practitioner 
+          details: |
+            I gained basic knowledge basic knowledge about AWS cloud, services, and terminology.
+        - name: Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow
+          start: 2023
+          end: 
+          organization: Aurélien Géron
+          credentialid: 
+          credentialurl: https://www.amazon.com/Hands-Machine-Learning-Scikit-Learn-TensorFlow/dp/1492032646
+          credentialname: Book 
+          details: |
+            This book has allowed me to learn both the fundamentals of machine learning and more advanced topics. As a result, I can create an end-to-end Python machine learning project using basic algorithms, neural networks, or deep learning, all using Scikit-learn, Keras, and TensorFlow.
+
 
 projects:
     title: Projects
-    intro: >
-      You can list your side projects in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+    intro:
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+      - title: "BSc Thesis: Application of a genetic algorithm for travel optimization"
+        link: https://github.com/khrycalik/Engineering-Thesis?tab=readme-ov-file
+        tagline: The project analyzed how changes in genetic algorithm parameters and methods affect the outcome. Both the traveling salesman problem and the knapsack problem were examined, and the computations were performed on the Ares supercomputer to achieve the objectives. The program that performs these tasks was written in Python and utilizes the numpy and pandas libraries.
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
+      - title: Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow
+        link: https://github.com/khrycalik/Hands-On-Machine-Learning
+        tagline: This project includes exercises from each chapter of the book to enhance understanding and reinforce what I have learned. These tasks were solved in a Jupyter Notebook environment using Scikit-learn, Keras, and TensorFlow frameworks.
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
+      - title: Ericsson Booster Carrier Sleep 5G
+        link: https://www.ericsson.com/en/ran/massive-mimo
+        tagline: One of the Ericsson's 5G key projects, Booster Carrier Sleep allows carriers to be switched on and off dynamically based on the traffic demand. This software creates more opportunities for cell sleep and radio deep sleep to be activated autonomously, being a key enabler for energy efficiency. As part of the implementation, I use C++17. Depending on the level, tests either utilize the Google Test framework or are written in Erlang. The main part of the documentation is written using plantUML.
 
 oss:
-    title: OSS Contributions
-    intro: >
-      You can list your open source software contributions in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+    title:
+    intro:
     contributions:
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
+      - title:
+        link:
+        tagline:
 
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
 
 publications:
-    title: Publications
-    intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
+    title:
+    intro:
     papers:
-      - title: The Art of Computer Programming
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
+      - title:
+        link:
+        authors:
+        conference:
 
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
 
 skills:
-    title: Skills &amp; Proficiency
-
+    title:
     toolset:
-      - name: Python & Django
-        level: 98%
-
-      - name: Javascript & jQuery
-        level: 98%
-
-      - name: Angular
-        level: 98%
-
-      - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
-        level: 85%
-
-      - name: Sketch & Photoshop
-        level: 60%
-
-footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+      - name:
+        level:
